--- a/v1/users/index.html
+++ b/v1/users/index.html
@@ -15,9 +15,10 @@
   
   <link href="/shared/css/documentation.css" rel="stylesheet" />
   <link href="/shared/css/pygments.css" rel="stylesheet" />
-  <link href="/shared/css/font-awesome.css" rel="stylesheet" />
-  <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
-  <!--[if lte IE 7]> <link href="/shared/css/font-awesome-ie7.css" rel="stylesheet" /> <![endif]-->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css">
+  
+  <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->  
+  <!--[if lte IE 9]> <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-ie7.css" rel="stylesheet" /> <![endif]-->
 </head>
 <body class="api">
 
@@ -213,6 +214,13 @@ user infered from an access token.</p>
   <dd><em>String</em></dd>
   <dt>postal_code</dt>
   <dd><em>String</em></dd>
+  <dt>pass</dt>
+  <dd>
+<em>String</em> Password, must be at least 5 characters long. If updating this value, pass_confirmation must also be
+provided.</dd>
+  <dt>pass_confirmation</dt>
+  <dd>
+<em>String</em> Same as pass</dd>
   <dt>partner_data</dt>
   <dd>
 <em>Hash</em> Store data about a user.  Be careful to not overwrite this value.</dd>
@@ -351,23 +359,28 @@ was not included on the request then the reponse will be</li>
   </article>
 </div>
 
+
 <footer class="row">
-  <div class="centered clearfix">
-    <div class="left">
-      <nav class="clearfix">
-        <ul>
-          <li><a href="http://www.deem.com/developer/">Home</a></li>
-          <li><a href="/">Documentation</a></li>
-          <li><a href="mailto:support@offerengine.com">Support</a></li>
+  <div class="centered">
+      <nav>
+        <ul class="left">
+          <li><a href="http://www.deem.com/"><img src="http://media.deem.com/designimages/deem_logo.png" alt="Deem" width="59" height="18"></a></li>
+          <li><a href="http://www.deem.com/work">Save</a></li>
+          <li><a href="http://www.deem.com/merchant">Sell</a></li>
+          <li><a href="http://www.reardencommerce.com/" target="_blank">Partner</a></li>
+          <li><a href="http://blog.deem.com/">Discover</a></li>
+          <li><a href="http://www.deem.com/developer">Develop</a></li>
+        </ul>
+
+        <ul class="right">
+          <li><a href="http://www.reardencommerce.com/" target="_blank">About Us</a></li>     
           <li><a href="http://www.reardencommerce.com/privacy/terms.html" target="_blank">Terms</a></li>
           <li><a href="http://www.reardencommerce.com/privacy/global-privacy-statement.html" target="_blank">Privacy</a></li>
-        </ul>
+          <li><a href="mailto:needhelp@deem">Feedback</a></li>
+        </ul>      
       </nav>
-      <p class="legal">&copy; 1999-2012 <a href="http://www.reardencommerce.com/" target="_blank">Rearden Commerce</a>, Inc. All rights reserved.</p>
+      <p>&copy; 1999-2013 Rearden Commerce, Inc. All rights reserved.</p>
     </div>
-    
-    <h6 class="right"><img src="/shared/images/deem_developers.png" alt="Deem Developers" /></h6>
-  </div>
 </footer>
 
 <script src="/shared/js/jquery.js"></script>
