--- a/v1/regions/activity/index.html
+++ b/v1/regions/activity/index.html
@@ -91,7 +91,10 @@
       </nav>
     
       <div class="content col9">
-        <h1 id="region-activities">Region Activities</h1>
+        <h1 id="warning-deprecated">Warning Deprecated</h1>
+<p><strong>This call will be removed in a future release</strong></p>
+
+<h1 id="region-activities">Region Activities</h1>
 
 <h2 id="list-all-regions-activities">List all region’s activities</h2>
 <p>Returns an array of activity representations.</p>
