--- a/v1/users/access_tokens/index.html
+++ b/v1/users/access_tokens/index.html
@@ -91,7 +91,10 @@
       </nav>
     
       <div class="content col9">
-        <h1 id="user-access-tokens">User Access Tokens</h1>
+        <h1 id="warning-deprecated">Warning Deprecated</h1>
+<p><strong>This call will be removed in a future release</strong></p>
+
+<h1 id="user-access-tokens">User Access Tokens</h1>
 
 <p>Access tokens are temporary tokens which allow users to call APIs directly. Think JavaScript checkout flows, and the like.</p>
 
