--- a/v1/users/images/index.html
+++ b/v1/users/images/index.html
@@ -91,7 +91,10 @@
       </nav>
     
       <div class="content col9">
-        <h1 id="user-images">User Images</h1>
+        <h1 id="warning-deprecated">Warning Deprecated</h1>
+<p><strong>This call will be removed in a future release</strong></p>
+
+<h1 id="user-images">User Images</h1>
 
 <p>Users can have a single image.</p>
 
