--- a/v1/deals/discussions/index.html
+++ b/v1/deals/discussions/index.html
@@ -91,7 +91,10 @@
       </nav>
     
       <div class="content col9">
-        <h1 id="deal-discussions">Deal Discussions</h1>
+        <h1 id="warning-deprecated">Warning Deprecated</h1>
+<p><strong>This call will be removed in a future release</strong></p>
+
+<h1 id="deal-discussions">Deal Discussions</h1>
 
 <h2 id="get-a-deals-discussion">Get a deal’s discussion</h2>
 
