--- a/v1/quick_start/index.html
+++ b/v1/quick_start/index.html
@@ -32,7 +32,7 @@
         <ul>
           <li><a href="http://www.deem.com/developer/">Home</a></li>
           <li><a href="/" class="active">Documentation</a></li>
-          <li><a href="mailto:support@offerengine.com">Support</a></li>
+          <li><a href="mailto:support@deem.com">Support</a></li>
         </ul>
       </nav>
     </div>
@@ -67,6 +67,7 @@
 
         <h1>Additional Calls</h1>
         <ul>
+          <li><a href="/v1/adunits/">Ad Units</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/deals/">Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
@@ -94,7 +95,7 @@
 <li>Authentication</li>
   <li>Get Deals</li>
   <li>Execute Purchases</li>
-</ol><p>In order to use the Deem Offers API, you must be an approved Deem Offers partner with access to your Deem Offers Admin site. If you are not a Deem Offers partner, or you can’t log into your Deem Offers Admin site, please contact <a href="mailto:support@offerengine.com">support</a>.</p>
+</ol><p>In order to use the Deem Offers API, you must be an approved Deem Offers partner with access to your Deem Offers Admin site. If you are not a Deem Offers partner, or you can’t log into your Deem Offers Admin site, please contact <a href="mailto:support@deem.com">support</a>.</p>
 
 <h2 id="step-1-authentication">Step 1: Authentication</h2>
 
