--- a/v1/users/purchases/index.html
+++ b/v1/users/purchases/index.html
@@ -32,7 +32,7 @@
         <ul>
           <li><a href="http://www.deem.com/developer/">Home</a></li>
           <li><a href="/" class="active">Documentation</a></li>
-          <li><a href="mailto:support@offerengine.com">Support</a></li>
+          <li><a href="mailto:support@deem.com">Support</a></li>
         </ul>
       </nav>
     </div>
@@ -67,6 +67,7 @@
 
         <h1>Additional Calls</h1>
         <ul>
+          <li><a href="/v1/adunits/">Ad Units</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/deals/">Deals</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/purchases/">Purchases</a><span class="icon-arrow-right"></span></li>
           <li><a href="/v1/regions/">Regions</a><span class="icon-arrow-right"></span></li>
