--- a/v1/changelog/index.html
+++ b/v1/changelog/index.html
@@ -104,8 +104,11 @@
 <h3 id="expected-changes">Expected Changes</h3>
 
 <ul>
-<li>Stuff here</li>
-</ul><h2 id="breaking-changes">Breaking Changes</h2>
+  <li>Stuff here</li>
+</ul>
+
+<h2 id="breaking-changes">Breaking Changes</h2>
+
       </div>
 
     </div>
