--- a/v1/regions/index.html
+++ b/v1/regions/index.html
@@ -90,9 +90,11 @@
         <h1 id="regions">Regions</h1>
 
 <ul>
-<li><a href="/v1/regions/#get-a-region">Get a region</a></li>
+  <li><a href="/v1/regions/#get-a-region">Get a region</a></li>
   <li><a href="/v1/regions/#list-all-regions">List all regions</a></li>
-</ul><h2 id="get-a-region">Get a region</h2>
+</ul>
+
+<h2 id="get-a-region">Get a region</h2>
 
 <pre><code>GET /api/v1/regions/:region_id
 </code></pre>
@@ -130,6 +132,7 @@
     <span class="p">}</span>
   <span class="p">]</span>
 <span class="p">}</span></code></pre>
+
       </div>
 
     </div>
