--- a/v1/stats/merchants/index.html
+++ b/v1/stats/merchants/index.html
@@ -90,8 +90,10 @@
         <h1 id="merchants">Merchants</h1>
 
 <ul>
-<li><a href="/v1/stats/#merchants">Get merchant stats</a></li>
-</ul><h2 id="get-merchant-stats">Get merchant stats</h2>
+  <li><a href="/v1/stats/merchants#merchants">Get merchant stats</a></li>
+</ul>
+
+<h2 id="get-merchant-stats">Get merchant stats</h2>
 <p>Returns a csv file of all the merchants.</p>
 
 <pre><code>GET /stats/merchants
@@ -100,6 +102,7 @@
 <h3 id="response">Response</h3>
 
 <pre class="headers"><code>Status: 200 OK</code></pre>
+
       </div>
 
     </div>
