--- a/v1/users/purchases/index.html
+++ b/v1/users/purchases/index.html
@@ -98,7 +98,7 @@
 <h3 id="parameters">Parameters</h3>
 
 <dl>
-<dt>count (optional)</dt>
+  <dt>count (optional)</dt>
   <dd>
 <em>Boolean</em> Returns the count instead of the list.  If present, per_page and page will be ignored.</dd>
   <dt>per_page (optional)</dt>
@@ -107,7 +107,9 @@
   <dt>page (optional)</dt>
   <dd>
 <em>Integer</em> Returns the list corresponding to the page number if the result cannot be displayed in a single page.  Default is 1.</dd>
-</dl><h3 id="response">Response</h3>
+</dl>
+
+<h3 id="response">Response</h3>
 
 <pre class="headers"><code>Status: 200 OK</code></pre>
 
@@ -150,6 +152,7 @@
     <span class="p">}</span>
   <span class="p">]</span>
 <span class="p">}</span></code></pre>
+
       </div>
 
     </div>
