--- a/v1/core/index.html
+++ b/v1/core/index.html
@@ -96,14 +96,17 @@
 <p>Use this call to get a list of deals currently available for sale.</p>
 
 <ul>
-<li><a href="/v1/get_deals/">Get Deals</a></li>
-</ul><h2 id="execute-purchases">Execute Purchases</h2>
+  <li><a href="/v1/get_deals/">Get Deals</a></li>
+</ul>
+
+<h2 id="execute-purchases">Execute Purchases</h2>
 
 <p>Use this call to make deal purchases. </p>
 
 <ul>
-<li><a href="/v1/full_purchase/">Execute Purchases</a></li>
+  <li><a href="/v1/full_purchase/">Execute Purchases</a></li>
 </ul>
+
       </div>
 
     </div>
