--- a/v1/regions/deals/index.html
+++ b/v1/regions/deals/index.html
@@ -104,7 +104,7 @@ GET /regions/:city,:state/deals
 <h3 id="parameters">Parameters</h3>
 
 <dl>
-<dt>user_id (optional)</dt>
+  <dt>user_id (optional)</dt>
   <dd>
 <em>String</em> A user id that will be used to filter deals (e.g. based on user preferences).</dd>
   <dt>filter (optional)</dt>
@@ -119,7 +119,9 @@ GET /regions/:city,:state/deals
   <dt>page (optional)</dt>
   <dd>
 <em>Integer</em> Returns the list corresponding to the page number if the result cannot be displayed in a single page.  Default is 1.</dd>
-</dl><h3 id="response">Response</h3>
+</dl>
+
+<h3 id="response">Response</h3>
 
 <pre class="headers"><code>Status: 200 OK</code></pre>
 
@@ -290,6 +292,7 @@ GET /regions/:city,:state/deals
     <span class="p">}</span>
   <span class="p">]</span>
 <span class="p">}</span></code></pre>
+
       </div>
 
     </div>
