--- a/v1/users/access_tokens/index.html
+++ b/v1/users/access_tokens/index.html
@@ -102,24 +102,26 @@
 <h3 id="parameters">Parameters</h3>
 
 <dl>
-<dt>expires_in</dt>
+  <dt>expires_in</dt>
   <dd>
 <em>Integer</em> time to live in seconds</dd>
   <dt>scope</dt>
   <dd>
     <ul>
-<li>
+      <li>
 <em>String</em> comma separated resources Examples: <code>user</code>, <code>credit_card</code>
 </li>
       <li>
 <code>all</code> for unlimited</li>
     </ul>
-</dd>
+  </dd>
   <dt>access</dt>
   <dd>
 <em>String</em> <code>read</code>, <code>write</code>, <code>read,write</code>
 </dd>
-</dl><h3 id="response">Response</h3>
+</dl>
+
+<h3 id="response">Response</h3>
 
 <pre class="headers"><code>Status: 200 OK</code></pre>
 
@@ -133,6 +135,7 @@
     <span class="s2">"access"</span><span class="o">:</span> <span class="s2">"read,write"</span>
   <span class="p">}</span>
 <span class="p">}</span></code></pre>
+
       </div>
 
     </div>
